--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -203,6 +203,6 @@ body {
 input,
 textarea {
   font-size: 16px !important;
-  transform: scale(0.75);
+  /* transform: scale(0.75); */
   transform-origin: left center;
 }
